Rename 'Metric Type' and 'Evaluation Task' to 'Metric' and 'Evaluation'
Updated documentation to consistently use 'Metric' instead of 'Metric Type' and 'Evaluation' instead of 'Evaluation Task'. Adjusted references, links, and descriptions across metric and evaluation concept files, SDK usage, and migration guide for clarity and alignment with new terminology.

--- a/snippets/changelog/2025-04-28.html
+++ b/snippets/changelog/2025-04-28.html
@@ -50,7 +50,7 @@
                 <h3 style="color: #333">User Experience Enhancements</h3>
                 <p style="color: #444; font-size: 16px">We're continuously refining the platform based on your feedback. This week's improvements include:</p>
                 <ul style="color: #444; font-size: 16px">
-                  <li><strong>Customizable Evaluation Tasks List:</strong> Show only the metrics you need.</li>
+                  <li><strong>Customizable Evaluations List:</strong> Show only the metrics you need.</li>
                   <li><strong>Enhanced Evaluation List Filtering:</strong> Filter by versions, evaluations, tests, and test groups.</li>
                   <li><strong>Enhanced Test List Filtering:</strong> Filter tests by their group.</li>
                   <li><strong>Smart Table Sorting:</strong> Automatically disables default sorting when custom sorting is applied.</li>
