--- a/snippets/changelog/2025-06-23.html
+++ b/snippets/changelog/2025-06-23.html
@@ -28,9 +28,9 @@
                 </p>
 
                 <br />
-                <h3 style="color: #333">Metric Type Tags</h3>
+                <h3 style="color: #333">Metric Tags</h3>
                 <p style="color: #444; font-size: 16px">
-                  Metric Types now support <strong>tags</strong> for easier classification and discovery. Quickly find and organize metrics relevant to your projects.
+                  Metrics now support <strong>tags</strong> for easier classification and discovery. Quickly find and organize metrics relevant to your projects.
                   <a href="https://docs.galtea.ai/concepts/metric" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">See all metrics</a>
                 </p>
 
