--- a/snippets/changelog/2025-06-16.html
+++ b/snippets/changelog/2025-06-16.html
@@ -38,7 +38,7 @@
                     <strong>New <a href="https://docs.galtea.ai/concepts/product/version/session" style="color: #5c5bdd">Sessions</a> Visualizations:</strong> Easily organize and navigate conversations through our new Sessions feature.
                   </li>
                   <li>
-                    <strong>Evaluations Visualization Removed:</strong> The dashboard now focuses on <strong>Sessions</strong> and <strong>Evaluation Tasks</strong> as the primary elements.
+                    <strong>Evaluations Visualization Removed:</strong> The dashboard now focuses on <strong>Sessions</strong> and <strong>Evaluations</strong> as the primary elements.
                   </li>
                   <li><strong>Better Filters Across Tables:</strong> Quickly find what you need with improved filtering capabilities on the dashboard.</li>
                   <li><strong>General Bug Fixes & UX Improvements:</strong> Enjoy smoother interactions, clearer tooltips, and more intuitive code snippets.</li>
@@ -52,7 +52,7 @@
                 </p>
                 <ul style="color: #444; font-size: 16px">
                   <li>
-                    <strong>Implicit Session Creation:</strong> Sessions are created automatically when needed for evaluation tasks.
+                    <strong>Implicit Session Creation:</strong> Sessions are created automatically when needed for evaluations.
                   </li>
                   <li>
                     <strong
