Replace 'task' terminology with 'evaluation'
Updated documentation and changelog files to consistently use 'evaluation' instead of 'task' when referring to evaluation objects and workflows. This improves clarity and aligns terminology across the platform and SDK guides.

--- a/snippets/changelog/2025-06-16.html
+++ b/snippets/changelog/2025-06-16.html
@@ -76,7 +76,7 @@
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>Smarter Test Coverage:</strong> <a href="https://docs.galtea.ai/concepts/product/test/case" style="color: #5c5bdd">Test cases</a> are now distributed more intelligently across your documents for better coverage based on the number of questions you choose to generate.</li>
                   <li>
-                    <strong>Single Threat per Red Teaming Test:</strong> Red Teaming Tests now only allow a single threat type per test, ensuring clearer results.
+                    <strong>Single Threat per Red Teaming Test:</strong> Red Teaming Tests now only allow a single threat per test, ensuring clearer results.
                   </li>
                 </ul>
 
